Use Android-safe blank speech check